named after, fix mobile top cutoff

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,7 +5,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
 }
 
 .main {
@@ -41,18 +40,31 @@
 }
 
 .title,
-.description,
-.tagline {
+.stream,
+.tagline,
+.description {
   text-align: center;
 }
 
 .tagline {
   font-size: 2.0rem;
   color: rgb(135,166,246);
+}
+
+.description {
   margin-bottom: 5rem;
 }
 
-/* .description {
+.description a {
+  text-decoration: underline dotted;
+  color: #ccc;
+}
+
+.description a:hover {
+  color: rgb(135,166,246);
+}
+
+/* .stream {
   line-height: 1;
   font-size: 1.5rem;
 } */
